Redesign UI with new theme, fonts, and improved styles
Updated color palette, fonts, and layout for a modern look. Enhanced App.css with new variables, gradients, shadows, and responsive design. Switched default font to Inter, improved accessibility, and refined dark mode. Updated index.html meta tags, font links, and language. Disabled send button when input is empty or loading.

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Recta AI - Your intelligent AI companion for conversations and assistance" />
+    <meta name="theme-color" content="#6366f1" />
     <title>Recta AI - AI Chatbot</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
